feat(sync): remote storage path as a parameter

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,11 +1,11 @@
 #!/bin/sh -e
 
 # parameters to be set by the user
-snapctl set storage-server!
 snapctl set topic-regex!
 snapctl set topic-exclude!
 
 # default parameters
 
+snapctl set storage-path="~/$HOSTNAME/"
 snapctl set max-bag-duration=300 # 5 mins
 snapctl set max-bag-size=250000000 # 250 MB
