--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -6,6 +6,6 @@ snapctl set topic-exclude!
 
 # default parameters
 
-snapctl set storage-path="~/$HOSTNAME/"
+snapctl set storage-base-path="~/"
 snapctl set max-bag-duration=300 # 5 mins
 snapctl set max-bag-size=250000000 # 250 MB
