--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -6,6 +6,9 @@ snapctl set topic-exclude!
 
 # default parameters
 
-snapctl set storage-base-path="~/"
+snapctl set remote-server-ip="0.0.0.0"
+snapctl set storage-base-path="/var/lib/caddy-fileserver/"
 snapctl set max-bag-duration=300 # 5 mins
 snapctl set max-bag-size=250000000 # 250 MB
+
+mkdir -p $SNAP_COMMON/data
