--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,15 +1,7 @@
 #!/bin/sh -e
 
-# parameters to be set by the user
-snapctl set device-uid!
-snapctl set topic-regex!
-snapctl set topic-exclude!
-
 # default parameters
-snapctl set remote-server-ip!
-snapctl set remote-server-port=2222
-snapctl set storage-base-path="/var/lib/caddy-fileserver/"
 snapctl set max-bag-duration=300 # 5 mins
 snapctl set max-bag-size=250000000 # 250 MB
 
-mkdir -p $SNAP_COMMON/data
+mkdir -p "${SNAP_COMMON}/data"
