--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -5,6 +5,7 @@ snapctl set topic-regex!
 snapctl set topic-exclude!
 
 # default parameters
+snapctl set remote-server-ip!
 snapctl set max-bag-duration=300 # 5 mins
 snapctl set max-bag-size=250000000 # 250 MB
 
